assign2 readme done

--- a/Assignment2/src/makefile
+++ b/Assignment2/src/makefile
@@ -17,6 +17,7 @@ clean:
 handin:	
 	@mkdir src
 	@cp *.java src/
+	@cp README.txt src/
 	@zip -r $(ENTRY)_assignment2.zip src/
 	@base64 $(ENTRY)_assignment2.zip > $(ENTRY)_assignment2.zip.b64
 	#@rm $(ENTRY)_assignment2.zip
